# apps/backend/openapi/public-openapi.json
@@ -103,6 +103,13 @@
       "StartCheckoutBody": {
         "type": "object",
         "properties": {
+          "lines": {
+            "type": "array",
+            "items": {
+              "$ref": "#/components/schemas/StartCheckoutLine"
+            },
+            "minItems": 1
+          },
           "shippingLocker": {
             "$ref": "#/components/schemas/CheckoutShippingLocker"
           },
@@ -116,7 +123,29 @@
           }
         },
         "required": [
-          "shippingLocker",
+          "shippingLocker"
+        ],
+        "additionalProperties": false
+      },
+      "StartCheckoutLine": {
+        "type": "object",
+        "properties": {
+          "quantity": {
+            "type": "integer",
+            "minimum": 1,
+            "maximum": 9
+          },
+          "storeItemSlug": {
+            "type": "string",
+            "minLength": 1
+          },
+          "variantId": {
+            "type": "string",
+            "minLength": 1
+          }
+        },
+        "required": [
+          "quantity",
           "storeItemSlug",
           "variantId"
         ],
